Add HTML structure and get icons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,210 @@
   <title>Admin Dashboard</title>
 </head>
 <body>
-  
+  <aside>
+    <div class="brand"><a href="#">Dashboard</a></div>
+    <nav>
+      <ul>
+        <li><a href="#"><img src="./icons/home.svg">Home</a></li>
+        <li><a href="#"><img src="./icons/card-account-details-outline.svg">Profile</a></li>
+        <li><a href="#"><img src="./icons/message.svg">Messages</a></li>
+        <li><a href="#"><img src="./icons/clock-time-three.svg">History</a></li>
+        <li><a href="#"><img src="./icons/file-multiple.svg">Tasks</a></li>
+        <li><a href="#"><img src="./icons/account-group.svg">Communities</a></li>
+      </ul>
+      <ul>
+        <li><a href="#"><img src="./icons/cog.svg">Settings</a></li>
+        <li><a href="#"><img src="./icons/help-box.svg">Support</a></li>
+        <li><a href="#"><img src="./icons/shield-check.svg">Privacy</a></li>
+      </ul>
+    </nav>
+  </aside>
+  <header>
+    <div class="header-top">
+      <div class="search">
+        <form>
+          <button>Search</button>
+          <input type="search" name="search" id="search">
+        </form>
+      </div>
+      <div class="notification"></div>
+      <div class="profile">
+        <img src="" alt="Profile image">
+        <div class="username">Morgan Oakley</div>
+      </div>
+    </div>
+    <div class="header-bottom">
+      <div class="profile">
+        <img src="" alt="Profile image">
+        <div class="greeting">
+          <span>Hi there,</span>
+          <div class="username">Morgan Oakley</div>
+          (<a href="#">@morgan</a>)
+        </div>
+      </div>
+      <div class="actions">
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section class="projects">
+      <h2>Your Projects</h2>
+      <div class="project">
+        <h3>Super cool project</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Illum molestias voluptatum velit consequuntur quo culpa?
+        </p>
+        <div class="actions">
+          <div class="star">
+            <img src="./icons/star-plus-outline.svg">
+          </div>
+          <div class="watch">
+            <img src="./icons/eye-plus-outline.svg">
+          </div>
+          <div class="share">
+            <img src="./icons/share-variant-outline.svg">
+          </div>
+        </div>
+      </div>
+      <div class="project">
+        <h3>Super cool project</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Illum molestias voluptatum velit consequuntur quo culpa?
+        </p>
+        <div class="actions">
+          <div class="star">
+            <img src="./icons/star-plus-outline.svg">
+          </div>
+          <div class="watch">
+            <img src="./icons/eye-plus-outline.svg">
+          </div>
+          <div class="share">
+            <img src="./icons/share-variant-outline.svg">
+          </div>
+        </div>
+      </div>
+      <div class="project">
+        <h3>Super cool project</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Illum molestias voluptatum velit consequuntur quo culpa?
+        </p>
+        <div class="actions">
+          <div class="star">
+            <img src="./icons/star-plus-outline.svg">
+          </div>
+          <div class="watch">
+            <img src="./icons/eye-plus-outline.svg">
+          </div>
+          <div class="share">
+            <img src="./icons/share-variant-outline.svg">
+          </div>
+        </div>
+      </div>
+      <div class="project">
+        <h3>Super cool project</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Illum molestias voluptatum velit consequuntur quo culpa?
+        </p>
+        <div class="actions">
+          <div class="star">
+            <img src="./icons/star-plus-outline.svg">
+          </div>
+          <div class="watch">
+            <img src="./icons/eye-plus-outline.svg">
+          </div>
+          <div class="share">
+            <img src="./icons/share-variant-outline.svg">
+          </div>
+        </div>
+      </div>
+      <div class="project">
+        <h3>Super cool project</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Illum molestias voluptatum velit consequuntur quo culpa?
+        </p>
+        <div class="actions">
+          <div class="star">
+            <img src="./icons/star-plus-outline.svg">
+          </div>
+          <div class="watch">
+            <img src="./icons/eye-plus-outline.svg">
+          </div>
+          <div class="share">
+            <img src="./icons/share-variant-outline.svg">
+          </div>
+        </div>
+      </div>
+      <div class="project">
+        <h3>Super cool project</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Illum molestias voluptatum velit consequuntur quo culpa?
+        </p>
+        <div class="actions">
+          <div class="star">
+            <img src="./icons/star-plus-outline.svg">
+          </div>
+          <div class="watch">
+            <img src="./icons/eye-plus-outline.svg">
+          </div>
+          <div class="share">
+            <img src="./icons/share-variant-outline.svg">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="announcements">
+      <div class="announcement">
+        <h3>Site Maintenance</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Debitis eaque, laboriosam placeat consequatur velit ullam.
+        </p>
+      </div>
+      <div class="announcement">
+        <h3>Site Maintenance</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Debitis eaque, laboriosam placeat consequatur velit ullam.
+        </p>
+      </div>
+      <div class="announcement">
+        <h3>Site Maintenance</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Debitis eaque, laboriosam placeat consequatur velit ullam.
+        </p>
+      </div>
+    </section>
+    <section class="trending">
+      <div class="trending-user">
+        <img src="" alt="Trending user image">
+        <div class="user">
+          <div>@tegan</div>
+          <div>World Peace Builder</div>
+        </div>
+      </div>
+      <div class="trending-user">
+        <img src="" alt="Trending user image">
+        <div class="user">
+          <div>@tegan</div>
+          <div>World Peace Builder</div>
+        </div>
+      </div>
+      <div class="trending-user">
+        <img src="" alt="Trending user image">
+        <div class="user">
+          <div>@tegan</div>
+          <div>World Peace Builder</div>
+        </div>
+      </div>
+      <div class="trending-user">
+        <img src="" alt="Trending user image">
+        <div class="user">
+          <div>@tegan</div>
+          <div>World Peace Builder</div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
