Add header-bottom styles

--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
         <img src="" alt="Profile image">
         <div class="greeting">
           <span>Hi there,</span>
-          <div class="username">Morgan Oakley</div>
-          (<a href="#">@morgan</a>)
+          <div class="username">
+            <a href="#">Morgan Oakley (@morgan)</a>
+          </div>
         </div>
       </div>
       <div class="actions">
