Add projects styling

--- a/index.html
+++ b/index.html
@@ -138,108 +138,122 @@
   <main>
     <section class="projects">
       <h2>Your Projects</h2>
-      <div class="project">
-        <h3>Super cool project</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Illum molestias voluptatum velit consequuntur quo culpa?
-        </p>
-        <div class="actions">
-          <div class="star">
-            <img src="./icons/star-plus-outline.svg">
+      <div class="project-container">
+        <div class="project">
+          <div class="description">
+            <h3>Super cool project</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Illum molestias voluptatum velit consequuntur quo culpa?
+            </p>
           </div>
-          <div class="watch">
-            <img src="./icons/eye-plus-outline.svg">
+          <div class="actions">
+            <div class="star">
+              <img src="./icons/star-plus-outline.svg">
+            </div>
+            <div class="watch">
+              <img src="./icons/eye-plus-outline.svg">
+            </div>
+            <div class="share">
+              <img src="./icons/share-variant-outline.svg">
+            </div>
           </div>
-          <div class="share">
-            <img src="./icons/share-variant-outline.svg">
+        </div>
+        <div class="project">
+          <div class="description">
+            <h3>Super cool project</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Illum molestias voluptatum velit consequuntur quo culpa?
+            </p>
+          </div>
+          <div class="actions">
+            <div class="star">
+              <img src="./icons/star-plus-outline.svg">
+            </div>
+            <div class="watch">
+              <img src="./icons/eye-plus-outline.svg">
+            </div>
+            <div class="share">
+              <img src="./icons/share-variant-outline.svg">
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="description">
+            <h3>Super cool project</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Illum molestias voluptatum velit consequuntur quo culpa?
+            </p>
+          </div>
+          <div class="actions">
+            <div class="star">
+              <img src="./icons/star-plus-outline.svg">
+            </div>
+            <div class="watch">
+              <img src="./icons/eye-plus-outline.svg">
+            </div>
+            <div class="share">
+              <img src="./icons/share-variant-outline.svg">
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="description">
+            <h3>Super cool project</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Illum molestias voluptatum velit consequuntur quo culpa?
+            </p>
+          </div>
+          <div class="actions">
+            <div class="star">
+              <img src="./icons/star-plus-outline.svg">
+            </div>
+            <div class="watch">
+              <img src="./icons/eye-plus-outline.svg">
+            </div>
+            <div class="share">
+              <img src="./icons/share-variant-outline.svg">
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="description">
+            <h3>Super cool project</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Illum molestias voluptatum velit consequuntur quo culpa?
+            </p>
+          </div>
+          <div class="actions">
+            <div class="star">
+              <img src="./icons/star-plus-outline.svg">
+            </div>
+            <div class="watch">
+              <img src="./icons/eye-plus-outline.svg">
+            </div>
+            <div class="share">
+              <img src="./icons/share-variant-outline.svg">
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="description">
+            <h3>Super cool project</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Illum molestias voluptatum velit consequuntur quo culpa?
+            </p>
+          </div>
+          <div class="actions">
+            <div class="star">
+              <img src="./icons/star-plus-outline.svg">
+            </div>
+            <div class="watch">
+              <img src="./icons/eye-plus-outline.svg">
+            </div>
+            <div class="share">
+              <img src="./icons/share-variant-outline.svg">
+            </div>
           </div>
         </div>
       </div>
-      <div class="project">
-        <h3>Super cool project</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Illum molestias voluptatum velit consequuntur quo culpa?
-        </p>
-        <div class="actions">
-          <div class="star">
-            <img src="./icons/star-plus-outline.svg">
-          </div>
-          <div class="watch">
-            <img src="./icons/eye-plus-outline.svg">
-          </div>
-          <div class="share">
-            <img src="./icons/share-variant-outline.svg">
-          </div>
-        </div>
-      </div>
-      <!-- <div class="project">
-        <h3>Super cool project</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Illum molestias voluptatum velit consequuntur quo culpa?
-        </p>
-        <div class="actions">
-          <div class="star">
-            <img src="./icons/star-plus-outline.svg">
-          </div>
-          <div class="watch">
-            <img src="./icons/eye-plus-outline.svg">
-          </div>
-          <div class="share">
-            <img src="./icons/share-variant-outline.svg">
-          </div>
-        </div>
-      </div> -->
-      <!-- <div class="project">
-        <h3>Super cool project</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Illum molestias voluptatum velit consequuntur quo culpa?
-        </p>
-        <div class="actions">
-          <div class="star">
-            <img src="./icons/star-plus-outline.svg">
-          </div>
-          <div class="watch">
-            <img src="./icons/eye-plus-outline.svg">
-          </div>
-          <div class="share">
-            <img src="./icons/share-variant-outline.svg">
-          </div>
-        </div>
-      </div> -->
-      <!-- <div class="project">
-        <h3>Super cool project</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Illum molestias voluptatum velit consequuntur quo culpa?
-        </p>
-        <div class="actions">
-          <div class="star">
-            <img src="./icons/star-plus-outline.svg">
-          </div>
-          <div class="watch">
-            <img src="./icons/eye-plus-outline.svg">
-          </div>
-          <div class="share">
-            <img src="./icons/share-variant-outline.svg">
-          </div>
-        </div>
-      </div> -->
-      <!-- <div class="project">
-        <h3>Super cool project</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Illum molestias voluptatum velit consequuntur quo culpa?
-        </p>
-        <div class="actions">
-          <div class="star">
-            <img src="./icons/star-plus-outline.svg">
-          </div>
-          <div class="watch">
-            <img src="./icons/eye-plus-outline.svg">
-          </div>
-          <div class="share">
-            <img src="./icons/share-variant-outline.svg">
-          </div>
-        </div>
-      </div> -->
     </section>
     <section class="announcements">
       <div class="announcement">
