--- a/index.html
+++ b/index.html
@@ -256,52 +256,58 @@
       </div>
     </section>
     <section class="announcements">
-      <div class="announcement">
-        <h3>Site Maintenance</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Debitis eaque, laboriosam placeat consequatur velit ullam.
-        </p>
-      </div>
-      <div class="announcement">
-        <h3>Site Maintenance</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Debitis eaque, laboriosam placeat consequatur velit ullam.
-        </p>
-      </div>
-      <div class="announcement">
-        <h3>Site Maintenance</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Debitis eaque, laboriosam placeat consequatur velit ullam.
-        </p>
+      <h2>Announcements</h2>
+      <div class="announcement-container">
+        <div class="announcement">
+          <h3>Site Maintenance</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Debitis eaque, laboriosam placeat consequatur velit ullam.
+          </p>
+        </div>
+        <div class="announcement">
+          <h3>Site Maintenance</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Debitis eaque, laboriosam placeat consequatur velit ullam.
+          </p>
+        </div>
+        <div class="announcement">
+          <h3>Site Maintenance</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Debitis eaque, laboriosam placeat consequatur velit ullam.
+          </p>
+        </div>
       </div>
     </section>
     <section class="trending">
-      <div class="trending-user">
-        <img src="" alt="Trending user image">
-        <div class="user">
-          <div>@tegan</div>
-          <div>World Peace Builder</div>
+      <h2>Trending</h2>
+      <div class="trending-container">
+        <div class="trending-user">
+          <img src="" alt="Trending user image">
+          <div class="user">
+            <div>@tegan</div>
+            <div>World Peace Builder</div>
+          </div>
         </div>
-      </div>
-      <div class="trending-user">
-        <img src="" alt="Trending user image">
-        <div class="user">
-          <div>@tegan</div>
-          <div>World Peace Builder</div>
+        <div class="trending-user">
+          <img src="" alt="Trending user image">
+          <div class="user">
+            <div>@tegan</div>
+            <div>World Peace Builder</div>
+          </div>
         </div>
-      </div>
-      <div class="trending-user">
-        <img src="" alt="Trending user image">
-        <div class="user">
-          <div>@tegan</div>
-          <div>World Peace Builder</div>
+        <div class="trending-user">
+          <img src="" alt="Trending user image">
+          <div class="user">
+            <div>@tegan</div>
+            <div>World Peace Builder</div>
+          </div>
         </div>
-      </div>
-      <div class="trending-user">
-        <img src="" alt="Trending user image">
-        <div class="user">
-          <div>@tegan</div>
-          <div>World Peace Builder</div>
+        <div class="trending-user">
+          <img src="" alt="Trending user image">
+          <div class="user">
+            <div>@tegan</div>
+            <div>World Peace Builder</div>
+          </div>
         </div>
       </div>
     </section>
