--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
             <path d="M10,21H14A2,2 0 0,1 12,23A2,2 0 0,1 10,21M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M17,11A5,5 0 0,0 12,6A5,5 0 0,0 7,11V18H17V11M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" />
           </svg>
         </div>
-        <img src="" alt="Profile image">
+        <img src="./images/profile.jpg" alt="Profile image">
         <div class="username">Morgan Oakley</div>
       </div>
     </div>
     <div class="header-bottom">
       <div class="profile">
-        <img src="" alt="Profile image">
+        <img src="./images/profile.jpg" alt="Profile image">
         <div class="greeting">
           <span>Hi there,</span>
           <div class="username">
@@ -139,6 +139,25 @@
     <section class="projects">
       <h2>Your Projects</h2>
       <div class="project-container">
+        <div class="project">
+          <div class="description">
+            <h3>Super cool project</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Illum molestias voluptatum velit consequuntur quo culpa?
+            </p>
+          </div>
+          <div class="actions">
+            <div class="star">
+              <img src="./icons/star-plus-outline.svg">
+            </div>
+            <div class="watch">
+              <img src="./icons/eye-plus-outline.svg">
+            </div>
+            <div class="share">
+              <img src="./icons/share-variant-outline.svg">
+            </div>
+          </div>
+        </div>
         <div class="project">
           <div class="description">
             <h3>Super cool project</h3>
@@ -282,28 +301,28 @@
       <h2>Trending</h2>
       <div class="trending-container">
         <div class="trending-user">
-          <img src="" alt="Trending user image">
+          <img src="./images/profile.jpg" alt="Trending user image">
           <div class="user">
             <div>@tegan</div>
             <div>World Peace Builder</div>
           </div>
         </div>
         <div class="trending-user">
-          <img src="" alt="Trending user image">
+          <img src="./images/profile.jpg" alt="Trending user image">
           <div class="user">
             <div>@tegan</div>
             <div>World Peace Builder</div>
           </div>
         </div>
         <div class="trending-user">
-          <img src="" alt="Trending user image">
+          <img src="./images/profile.jpg" alt="Trending user image">
           <div class="user">
             <div>@tegan</div>
             <div>World Peace Builder</div>
           </div>
         </div>
         <div class="trending-user">
-          <img src="" alt="Trending user image">
+          <img src="./images/profile.jpg" alt="Trending user image">
           <div class="user">
             <div>@tegan</div>
             <div>World Peace Builder</div>
